--- a/LineUp/app/src/main/res/layout-v21/activity_mypage_header.xml
+++ b/LineUp/app/src/main/res/layout-v21/activity_mypage_header.xml
@@ -11,27 +11,37 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
-            <ImageButton
+            <LinearLayout
                 android:id="@+id/backBtn"
                 android:background="@anim/ripple"
-                android:src="@drawable/back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:gravity="center"
                 android:layout_marginLeft="15dp"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical">
+                <ImageView
+                    android:src="@drawable/back"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+            </LinearLayout>
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
             </View>
-            <ImageButton
-                android:src="@drawable/setting"
+            <LinearLayout
                 android:background="@anim/ripple"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:gravity="center"
                 android:layout_marginRight="15dp"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/settingBtn" />
+                android:id="@+id/settingBtn" >
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/setting"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="120dp"
@@ -42,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="120dp">
                 <ImageView
+                    android:id="@+id/profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bef_kakao"/>
@@ -50,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
+                    android:id="@+id/profile_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="USER"
