--- a/LineUp/app/src/main/res/layout/activity_main.xml
+++ b/LineUp/app/src/main/res/layout/activity_main.xml
@@ -15,31 +15,47 @@
             android:layout_marginLeft="-82dp"
             android:padding="0dp">
 
-            <ImageButton
+            <LinearLayout
                 android:stateListAnimator="@anim/anim"
                 android:background="@color/white"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/search"
-                android:layout_marginLeft="10dp"/>
-            <ImageButton
+                android:gravity="center"
+                android:layout_marginLeft="10dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/search"/>
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/mapBtn"
                 android:stateListAnimator="@anim/anim"
                 android:layout_marginLeft="0dp"
+                android:gravity="center"
                 android:background="@color/white"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/map" />
-            <ImageButton
+                android:layout_height="50dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/map"/>
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/mypageBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:stateListAnimator="@anim/anim"
                 android:background="@color/white"
+                android:gravity="center"
                 android:src="@drawable/mypage"
                 android:clickable="true"
                 android:layout_marginRight="0dp"
-                android:layout_gravity="right"/>
+                android:layout_gravity="right">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/mypage"/>
+            </LinearLayout>
 
 
         </android.support.v7.widget.Toolbar>
