--- a/LineUp/app/src/main/res/layout/activity_mypage_header.xml
+++ b/LineUp/app/src/main/res/layout/activity_mypage_header.xml
@@ -11,27 +11,37 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
-            <ImageButton
+            <LinearLayout
                 android:id="@+id/backBtn"
                 android:background="@color/white"
-                android:src="@drawable/back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:gravity="center"
                 android:layout_marginLeft="15dp"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical">
+                <ImageView
+                    android:src="@drawable/back"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+            </LinearLayout>
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1">
             </View>
-            <ImageButton
-                android:src="@drawable/setting"
+            <LinearLayout
                 android:background="@color/white"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:gravity="center"
                 android:layout_marginRight="15dp"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/settingBtn" />
+                android:id="@+id/settingBtn" >
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/setting"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="120dp"
