--- a/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
@@ -157,6 +157,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <RelativeLayout
+                    android:id="@+id/cancel_btn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageView
