--- a/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="500dp">
         <LinearLayout
+            android:id="@+id/link_btn"
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
@@ -53,6 +54,7 @@
                             android:layout_height="match_parent"
                             android:src="@drawable/lineup"/>
                         <TextView
+                            android:id="@+id/resrv_rname"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="@string/sample_name"
@@ -67,6 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="20dp">
                     <TextView
+                        android:id="@+id/resrv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="@color/black"
@@ -77,6 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp">
                     <TextView
+                        android:id="@+id/people_left"
                         android:textSize="70dp"
                         android:textColor="@color/maincolor"
                         android:text="07"
@@ -96,6 +100,7 @@
                         android:textColor="@color/black"
                         android:textSize="15dp"/>
                     <TextView
+                        android:id="@+id/resrv_name"
                         android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -115,6 +120,7 @@
                         android:textColor="@color/black"
                         android:textSize="15dp"/>
                     <TextView
+                        android:id="@+id/resrv_party"
                         android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -135,6 +141,7 @@
                         android:textColor="@color/black"
                         android:textSize="15dp"/>
                     <TextView
+                        android:id="@+id/time_left"
                         android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
