--- a/LineUp/app/src/main/res/layout-v22/activity_mypage_header.xml
+++ b/LineUp/app/src/main/res/layout-v22/activity_mypage_header.xml
@@ -22,7 +22,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:gravity="center"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="8dp"
                 android:layout_gravity="center_vertical"
                 android:id="@+id/settingBtn" >
                 <ImageView
@@ -43,7 +43,7 @@
                     android:id="@+id/profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/mypage"/>
+                    android:src="@drawable/profile_default"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
