--- a/LineUp/app/src/main/res/layout/res_menu.xml
+++ b/LineUp/app/src/main/res/layout/res_menu.xml
@@ -20,11 +20,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" >
     <TextView
+        android:background="@color/maincolor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:text="닫 기"
-        android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textSize="20dp"
 />
 
     </LinearLayout>
