--- a/LineUp/app/src/main/res/layout/reservation_page.xml
+++ b/LineUp/app/src/main/res/layout/reservation_page.xml
@@ -56,78 +56,72 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
                         android:id="@+id/selection_1"
-                        android:text="1"
-                        android:textSize="13dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
+
                         android:id="@+id/selection_2"
-                        android:text="2"
-                        android:textSize="13dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
+
                         android:id="@+id/selection_3"
-                        android:text="3"
-                        android:textSize="13dp"
+
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
+
                         android:id="@+id/selection_4"
-                        android:text="4"
-                        android:textSize="13dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
+                        android:clickable="true"
                         android:id="@+id/selection_5"
-                        android:text="5"
-                        android:textSize="13dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
+                    <ImageView
+
                         android:id="@+id/selection_6"
-                        android:text="6"
-                        android:textSize="13dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -157,43 +151,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <LinearLayout
+                    android:layout_marginRight="2dp"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
-                        android:textColor="@color/black"
-                        android:textSize="13dp"
-                        android:text="@string/date"
+                    <ImageView
+
                         android:layout_width="70dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
-                        android:textColor="@color/black"
-                        android:textSize="13dp"
-                        android:text="@string/family"
+                    <ImageView
                         android:layout_width="70dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:layout_marginLeft="2dp"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
-                    <Button
-                        android:textColor="@color/black"
-                        android:textSize="13dp"
-                        android:text="@string/group"
+                    <ImageView
                         android:layout_width="70dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/round_box"/>
+                        android:src="@drawable/reservation_select_event_number"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
