--- a/LineUp/app/src/main/res/layout/setting.xml
+++ b/LineUp/app/src/main/res/layout/setting.xml
@@ -29,17 +29,25 @@
             android:text="@string/setting_alarm"/>
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <TextView
             android:id="@+id/pushAlarm"
             android:layout_marginLeft="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:gravity="center_vertical"
             android:textSize="15dp"
             android:text="@string/push"/>
+            <Switch
+                android:shadowColor="@color/maincolor"
+                android:id="@+id/switch_notification"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,17 +55,24 @@
         android:background="@color/margin">
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <TextView
             android:id="@+id/couponAlarm"
             android:layout_marginLeft="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:gravity="center_vertical"
             android:textSize="15dp"
             android:text="@string/coupon"/>
+        <Switch
+            android:id="@+id/switch_notification2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:gravity="center"/>
     </LinearLayout>
     <LinearLayout
         android:paddingLeft="30dp"
